@@ -78,9 +78,6 @@ as.POSIXlt(x, tz = "", \dots)
   Logical \code{NA}s can be converted to either of the classes, but no
   other logical vectors can be.
 
-  The \code{as.double} method converts \code{"POSIXlt"} objects to
-  \code{"POSIXct"}.
-
   If you are given a numeric time as the number of seconds since an
   epoch, see the examples.
 
